Setting up Quartz to send outbox messages

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,17 @@ spring.datasource.port=${DB_PORT}
 
 spring.jpa.hibernate.ddl-auto = validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.threadPool.threadCount = 1
+spring.quartz.properties.org.quartz.scheduler.instanceName=outbox-quartz
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=qrtz_outbox_
+spring.quartz.jdbc.comment-prefix=#
